@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.412 2006/10/23 10:55:10 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.413 2006/10/23 13:24:21 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -161,6 +161,8 @@ PH/23 Testing for tls_required and lost_connection in a retry rule didn't work
 PH/24 Exim crashed if verify=helo was activated during an incoming -bs
       connection, where there is no client IP address to check. In this
       situation, the verify now always succeeds.
+
+PH/25 Applied John Jetmore's -Mset patch.
 
 
 Exim version 4.63
